WIP: command line

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,15 +5,15 @@ nav:
   - Get Started: get-started.md
   - Windows y WSL2: windows.md
   - Instructions: instructions.md
+  - Steps: steps.md
+  - Launch Rocketdoo: launch.md
+  - Rocketdoo Structure: structure.md
+  - Private Repositories: private.md
+  - Public Repositories: public.md
   - Recommended extensions: recommend-extensions.md
+  - Command Line: command.md
   - Use Cases: use-cases.md
   - Common Mistakes: common-mistakes.md
   - Debbuging in Odoo: debbuging-odoo.md
   - How to collaborate in this project?: collaborate.md
   - HelpDesk: helpdesk.md
-extra_javascript:
-  - js/copy-code.js
-
-extra_css:
-  - css/custom.css
-
