UPG: complete docs multilanguage

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,58 @@
 site_name: Rocketdoo
-theme: material
+theme:
+  name: material
+  favicon: assets/favicon.svg
+  features:
+    - content.code.copy        # Habilita el botón de copiar
+    - content.code.select      # Permite seleccionar código
+    - content.code.annotate 
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences    
+
 site_description: "Rocketdoo is a powerful tool for Odoo development, designed to streamline the process and enhance productivity."
+
+plugins:
+  - search
+  - i18n:
+      docs_structure: folder
+      fallback_to_default: true
+      reconfigure_material: true
+      reconfigure_search: true
+      languages:
+        - locale: en
+          name: English
+          default: true
+          build: true
+        - locale: es
+          name: Español
+          build: true
+          nav_translation:
+            Home: Inicio
+            Comenzar: Comenzar
+            Windoows and WSL2: Windows y WSL2
+            Instructions: Instrucciones
+            Steps: Pasos
+            Launch Rocketdoo: Lanzar Rocketdoo
+            Private Repositories: Repositorios Privados
+            Public Repositories: Repositorios Públicos
+            Recommended extensions: Extensiones recomendadas
+            Command Line: Linea de Comandos
+            Use Cases: Casos de Uso
+            Common Mistakes: Errores Comunes
+            Debbuging in Odoo: Depurando en Odoo
+            How to collaborate in this project?: ¿Cómo colaborar en este proyecto?
+            HelpDesk: Mesa de Ayuda
+        
 nav:
   - Home: index.md
   - Get Started: get-started.md
-  - Windows y WSL2: windows.md
+  - Windows and WSL2: windows.md
   - Instructions: instructions.md
   - Steps: steps.md
   - Launch Rocketdoo: launch.md
