FIX: theme on builds

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,6 +6,6 @@ build:
   jobs:
     pre_build:
       - pip install mkdocs
-      - pip install mkdocs-dracula-theme
+      - pip install mkdocs-material
 mkdocs:
   configuration: mkdocs.yml
