--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,3 +9,7 @@ build:
       - pip install mkdocs-material
 mkdocs:
   configuration: mkdocs.yml
+
+python:
+  install:
+    - requirements: requirements.txt
