--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ theme:
     - content.code.copy        # Habilita el botón de copiar
     - content.code.select      # Permite seleccionar código
     - content.code.annotate 
+
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
@@ -13,7 +14,8 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
-  - pymdownx.superfences    
+  - pymdownx.superfences
+  - admonition
 
 site_description: "Rocketdoo is a powerful tool for Odoo development, designed to streamline the process and enhance productivity."
 
@@ -32,22 +34,22 @@ plugins:
         - locale: es
           name: Español
           build: true
-          nav_translation:
-            Home: Inicio
-            Comenzar: Comenzar
-            Windoows and WSL2: Windows y WSL2
-            Instructions: Instrucciones
-            Steps: Pasos
-            Launch Rocketdoo: Lanzar Rocketdoo
-            Private Repositories: Repositorios Privados
-            Public Repositories: Repositorios Públicos
-            Recommended extensions: Extensiones recomendadas
-            Command Line: Linea de Comandos
-            Use Cases: Casos de Uso
-            Common Mistakes: Errores Comunes
-            Debbuging in Odoo: Depurando en Odoo
-            How to collaborate in this project?: ¿Cómo colaborar en este proyecto?
-            HelpDesk: Mesa de Ayuda
+          # nav_translation:
+          #   Home: Inicio
+          #   Comenzar: Comenzar
+          #   Windoows and WSL2: Windows y WSL2
+          #   Instructions: Instrucciones
+          #   Steps: Pasos
+          #   Launch Rocketdoo: Lanzar Rocketdoo
+          #   Private Repositories: Repositorios Privados
+          #   Public Repositories: Repositorios Públicos
+          #   Recommended extensions: Extensiones recomendadas
+          #   Command Line: Linea de Comandos
+          #   Use Cases: Casos de Uso
+          #   Common Mistakes: Errores Comunes
+          #   Debbuging in Odoo: Depurando en Odoo
+          #   How to collaborate in this project?: ¿Cómo colaborar en este proyecto?
+          #   HelpDesk: Mesa de Ayuda
         
 nav:
   - Home: index.md
@@ -66,8 +68,3 @@ nav:
   - Debbuging in Odoo: debbuging-odoo.md
   - How to collaborate in this project?: collaborate.md
   - HelpDesk: helpdesk.md
-  
-markdown_extensions:
-  - admonition
-  - toc:
-      permalink: "#"
