WIP: search static-i18n

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ site_description: "Rocketdoo is a powerful tool for Odoo development, designed t
 
 plugins:
   - search
-  - i18n:
+  - static-i18n:
       docs_structure: folder
       fallback_to_default: true
       reconfigure_material: true
@@ -34,22 +34,22 @@ plugins:
         - locale: es
           name: Español
           build: true
-          # nav_translation:
-          #   Home: Inicio
-          #   Comenzar: Comenzar
-          #   Windoows and WSL2: Windows y WSL2
-          #   Instructions: Instrucciones
-          #   Steps: Pasos
-          #   Launch Rocketdoo: Lanzar Rocketdoo
-          #   Private Repositories: Repositorios Privados
-          #   Public Repositories: Repositorios Públicos
-          #   Recommended extensions: Extensiones recomendadas
-          #   Command Line: Linea de Comandos
-          #   Use Cases: Casos de Uso
-          #   Common Mistakes: Errores Comunes
-          #   Debbuging in Odoo: Depurando en Odoo
-          #   How to collaborate in this project?: ¿Cómo colaborar en este proyecto?
-          #   HelpDesk: Mesa de Ayuda
+          nav_translation:
+            Home: Inicio
+            Comenzar: Comenzar
+            Windoows and WSL2: Windows y WSL2
+            Instructions: Instrucciones
+            Steps: Pasos
+            Launch Rocketdoo: Lanzar Rocketdoo
+            Private Repositories: Repositorios Privados
+            Public Repositories: Repositorios Públicos
+            Recommended extensions: Extensiones recomendadas
+            Command Line: Linea de Comandos
+            Use Cases: Casos de Uso
+            Common Mistakes: Errores Comunes
+            Debbuging in Odoo: Depurando en Odoo
+            How to collaborate in this project?: ¿Cómo colaborar en este proyecto?
+            HelpDesk: Mesa de Ayuda
         
 nav:
   - Home: index.md
