--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,9 +36,9 @@ plugins:
         - locale: es
           name: Español
           build: true
-          nav_translation:
+          nav_translations:
             Home: Inicio
-            Comenzar: Comenzar
+            Get Started: Comenzar
             Windoows and WSL2: Windows y WSL2
             Instructions: Instrucciones
             Steps: Pasos
