ADD: structure item

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ plugins:
             Instructions: Instrucciones
             Steps: Pasos
             Launch Rocketdoo: Lanzar Rocketdoo
+            Rocketdoo Structure: Estructura de Rocketdoo
             Private Repositories: Repositorios Privados
             Public Repositories: Repositorios Públicos
             Recommended extensions: Extensiones recomendadas
